# Neural-Image-Compression

./: .gitignore  README.md
Neuron-Image-Compression/: CMakeLists.txt  Neuron-Image-Compression.pro  filenameedit.cpp  filenameedit.h  framegriddisplay.cpp  framegriddisplay.h  main.cpp  mainwidget.cpp  mainwidget.h  neuralcompressor.cpp  neuralcompressor.h  neuralspan.cpp  neuralspan.h  pixmapwidget.cpp  pixmapwidget.h  res.qrc  trainingsample.cpp  trainingsample.h  trainingset.cpp  trainingset.h
Neuron-Image-Compression/kernel/: carray.cpp  carray.h  cmatrix.cpp  cmatrix.h  crange.h  csize.cpp  csize.h  cvector.cpp  cvector.h
